--- a/_posts/2021-10-16-painting1.md
+++ b/_posts/2021-10-16-painting1.md
@@ -1,13 +1,7 @@
 ---
 layout: post
-title: What's Jekyll?
+title: Painting 1
 ---
-
-[Jekyll](https://jekyllrb.com) is a static site generator, an open-source tool for creating simple yet powerful websites of all shapes and sizes. From [the project's readme](https://github.com/jekyll/jekyll/blob/master/README.markdown):
-
-> Jekyll is a simple, blog aware, static site generator. It takes a template directory [...] and spits out a complete, static website suitable for serving with Apache or your favorite web server. This is also the engine behind GitHub Pages, which you can use to host your project’s page or blog right here from GitHub.
-
-It's an immensely useful tool. Find out more by [visiting the project on GitHub](https://github.com/jekyll/jekyll).
 <div id="smart-button-container">
 <div style="text-align: center;">
 <div style="margin-bottom: 1.25rem;">
@@ -29,7 +23,7 @@ var quantitySelect = document.querySelector("#smart-button-container #quantitySe
 if (!isNaN(quantity)) {
 quantitySelect.style.visibility = "visible";
 }
-var orderDescription = 'Enhanced Matte Art Paper: matte finish, shallow tooth Hahnemühle German Etching Paper:  matte finish, deep tooth';
+var orderDescription = 'Enhanced Matte Art Paper: matte finish, shallow tooth Hahnemühle German Etching Paper: matte finish, deep tooth';
 if(orderDescription === '') {
 orderDescription = 'Item';
 }
