--- a/_posts/2021-10-16-painting1.md
+++ b/_posts/2021-10-16-painting1.md
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: Painting 1
+title: Beyond Bridges
 ---
+![alt text for screen readers](/assets/LowRez49images/Beyond bridges copy.jpg "Beyond Bridges")
 <div id="smart-button-container">
 <div style="text-align: center;">
 <div style="margin-bottom: 1.25rem;">
