--- a/_posts/2021-10-16-painting1.md
+++ b/_posts/2021-10-16-painting1.md
@@ -6,7 +6,7 @@ title: Beyond Bridges
 <div id="smart-button-container">
 <div style="text-align: center;">
 <div style="margin-bottom: 1.25rem;">
-<p>Painting 1 Enhanced Matte Art Paper: matte finish, shallow tooth
+<p>Beyond Bridges Enhanced Matte Art Paper: matte finish, shallow tooth
 Hahnemühle German Etching Paper:  matte finish, deep tooth</p>
 <select id="item-options"><option value="9in x12in Enhanced Matte Art Print" price="1">9in x12in Enhanced Matte Art Print - 1 USD</option></select>
 <select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option></select>
@@ -24,7 +24,7 @@ var quantitySelect = document.querySelector("#smart-button-container #quantitySe
 if (!isNaN(quantity)) {
 quantitySelect.style.visibility = "visible";
 }
-var orderDescription = 'Painting 1 Enhanced Matte Art Paper: matte finish, shallow tooth Hahnemühle German Etching Paper: matte finish, deep tooth';
+var orderDescription = 'Beyond Bridges Enhanced Matte Art Paper: matte finish, shallow tooth Hahnemühle German Etching Paper: matte finish, deep tooth';
 if(orderDescription === '') {
 orderDescription = 'Item';
 }
