--- a/_posts/2021-10-16-Daybreak.md
+++ b/_posts/2021-10-16-Daybreak.md
@@ -1,14 +1,15 @@
 ---
 layout: post
-title: Painting 3
+title: Daybreak
 ---
+![alt text for screen readers](/assets/LowRez49images/daybreak copy.jpg "daybreak")
 <div id="smart-button-container">
 <div style="text-align: center;">
 <div style="margin-bottom: 1.25rem;">
-<p>Painting 1 Enhanced Matte Art Paper: matte finish, shallow tooth
-Hahnemühle German Etching Paper:  matte finish, deep tooth</p>
-<select id="item-options"><option value="9in x12in Enhanced Matte Art Print" price="1">9in x12in Enhanced Matte Art Print - 1 USD</option></select>
-<select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option></select>
+<p>Beyond Bridges
+Art Print</p>
+<select id="item-options"><option value="9inx12in Enhanced Matte Art Print" price="1.00">9inx12in Enhanced Matte Art Print - 1.00 USD</option><option value="9inx12inHahnemühle German Etching Print" price="1.12">9inx12inHahnemühle German Etching Print - 1.12 USD</option></select>
+<select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option></select>
 </div>
 <div id="paypal-button-container"></div>
 </div>
@@ -16,14 +17,14 @@ Hahnemühle German Etching Paper:  matte finish, deep tooth</p>
 <script src="https://www.paypal.com/sdk/js?client-id=sb&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
 <script>
 function initPayPalButton() {
-var shipping = 2.99;
+var shipping = 0;
 var itemOptions = document.querySelector("#smart-button-container #item-options");
-var quantity = parseInt(5);
+var quantity = parseInt(12);
 var quantitySelect = document.querySelector("#smart-button-container #quantitySelect");
 if (!isNaN(quantity)) {
 quantitySelect.style.visibility = "visible";
 }
-var orderDescription = 'Painting 1 Enhanced Matte Art Paper: matte finish, shallow tooth Hahnemühle German Etching Paper: matte finish, deep tooth';
+var orderDescription = 'Beyond Bridges Art Print';
 if(orderDescription === '') {
 orderDescription = 'Item';
 }
@@ -32,7 +33,7 @@ style: {
 shape: 'rect',
 color: 'gold',
 layout: 'vertical',
-label: 'buynow',
+label: 'checkout',
 
 },
 createOrder: function(data, actions) {
@@ -59,16 +60,16 @@ currency_code: 'USD',
 value: priceTotal,
 breakdown: {
 item_total: {
-  currency_code: 'USD',
-  value: itemTotalValue,
+currency_code: 'USD',
+value: itemTotalValue,
 },
 shipping: {
-  currency_code: 'USD',
-  value: shipping,
+currency_code: 'USD',
+value: shipping,
 },
 tax_total: {
-  currency_code: 'USD',
-  value: tax,
+currency_code: 'USD',
+value: tax,
 }
 }
 },
