--- a/_posts/2021-10-16-Daybreak.md
+++ b/_posts/2021-10-16-Daybreak.md
@@ -6,25 +6,24 @@ title: Daybreak
 <div id="smart-button-container">
 <div style="text-align: center;">
 <div style="margin-bottom: 1.25rem;">
-<p>Beyond Bridges
-Art Print</p>
-<select id="item-options"><option value="9inx12in Enhanced Matte Art Print" price="1.00">9inx12in Enhanced Matte Art Print - 1.00 USD</option><option value="9inx12inHahnemühle German Etching Print" price="1.12">9inx12inHahnemühle German Etching Print - 1.12 USD</option></select>
-<select style="visibility: hidden" id="quantitySelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option></select>
+<p>print</p>
+<select id="item-options"><option value="9inx12in Enhanced Matte Art Print" price=".50">9inx12in Enhanced Matte Art Print - .50 USD</option><option value="9inx12inHahnemühle German Etching Print" price=".25">9inx12inHahnemühle German Etching Print - .25 USD</option></select>
+<select style="visibility: hidden" id="quantitySelect"></select>
 </div>
 <div id="paypal-button-container"></div>
 </div>
 </div>
-<script src="https://www.paypal.com/sdk/js?client-id=sb&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
+<script src="https://www.paypal.com/sdk/js?client-id=AWrwQx91eDLrh27pGp-m6tFEQ63JvUU-YmrjkJBHvfZ3ruS-ElPBwveEKpNp8fCgpW8JQxyUHaEvA8pf&enable-funding=venmo&currency=USD" data-sdk-integration-source="button-factory"></script>
 <script>
 function initPayPalButton() {
 var shipping = 0;
 var itemOptions = document.querySelector("#smart-button-container #item-options");
-var quantity = parseInt(12);
+var quantity = parseInt();
 var quantitySelect = document.querySelector("#smart-button-container #quantitySelect");
 if (!isNaN(quantity)) {
 quantitySelect.style.visibility = "visible";
 }
-var orderDescription = 'Beyond Bridges Art Print';
+var orderDescription = 'print';
 if(orderDescription === '') {
 orderDescription = 'Item';
 }
@@ -33,7 +32,7 @@ style: {
 shape: 'rect',
 color: 'gold',
 layout: 'vertical',
-label: 'checkout',
+label: 'paypal',
 
 },
 createOrder: function(data, actions) {
