--- a/_posts/2021-10-16-Daybreak.md
+++ b/_posts/2021-10-16-Daybreak.md
@@ -6,8 +6,8 @@ title: Daybreak
 <div id="smart-button-container">
 <div style="text-align: center;">
 <div style="margin-bottom: 1.25rem;">
-<p>print</p>
-<select id="item-options"><option value="9inx12in Enhanced Matte Art Print" price=".50">9inx12in Enhanced Matte Art Print - .50 USD</option><option value="9inx12inHahnemühle German Etching Print" price=".25">9inx12inHahnemühle German Etching Print - .25 USD</option></select>
+<p>Daybreak Art Print</p>
+<select id="item-options"><option value="9inx12in Enhanced Matte Art Daybreak Print" price=".25">9inx12in Enhanced Matte Art Daybreak Print - .25 USD</option><option value="9inx12inHahnemühle German Etching Daybreak Print" price=".25">9inx12inHahnemühle German Etching Daybreak Print - .25 USD</option></select>
 <select style="visibility: hidden" id="quantitySelect"></select>
 </div>
 <div id="paypal-button-container"></div>
@@ -23,13 +23,13 @@ var quantitySelect = document.querySelector("#smart-button-container #quantitySe
 if (!isNaN(quantity)) {
 quantitySelect.style.visibility = "visible";
 }
-var orderDescription = 'print';
+var orderDescription = 'Daybreak Art Print';
 if(orderDescription === '') {
 orderDescription = 'Item';
 }
 paypal.Buttons({
 style: {
-shape: 'rect',
+shape: 'pill',
 color: 'gold',
 layout: 'vertical',
 label: 'paypal',
