--- a/_posts/2020-10-16-Depths.md
+++ b/_posts/2020-10-16-Depths.md
@@ -2,7 +2,7 @@
 layout: post
 title: Depths
 ---
-![alt text for screen readers](/assets/LowRez49images/Depths.jpg "Depths")
+![alt text for screen readers](/assets/images/Depths.jpg "Depths")
 <div id="smart-button-container">
 <div style="text-align: center;">
 <div style="margin-bottom: 1.25rem;">
