--- a/_posts/2020-10-16-Flaming.md
+++ b/_posts/2020-10-16-Flaming.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: Moonlight Foragers copy
+title: Flaming
 ---
-![alt text for screen readers](/assets/LowRez49images/Moonlight Foragers copy.jpg "Moonlight Foragers copy")
+![alt text for screen readers](/assets/images/Flaming.jpg "Flaming")
 <div id="smart-button-container">
 <div style="text-align: center;">
 <div style="margin-bottom: 1.25rem;">
-<p>Moonlight Foragers copy Art Print</p>
-<select id="item-options"><option value="9inx12in Enhanced Matte Art Moonlight Foragers copy Print" price=".25">9inx12in Enhanced Matte Art Moonlight Foragers copy Print - .25 USD</option><option value="9inx12inHahnemühle German Etching Moonlight Foragers copy Print" price=".25">9inx12inHahnemühle German Etching Moonlight Foragers copy Print - .25 USD</option></select>
+<p>Flaming Art Print</p>
+<select id="item-options"><option value="9inx12in Enhanced Matte Art Flaming Print" price=".25">9inx12in Enhanced Matte Art Flaming Print - .25 USD</option><option value="9inx12inHahnemühle German Etching Flaming Print" price=".25">9inx12inHahnemühle German Etching Flaming Print - .25 USD</option></select>
 <select style="visibility: hidden" id="quantitySelect"></select>
 </div>
 <div id="paypal-button-container"></div>
@@ -23,7 +23,7 @@ var quantitySelect = document.querySelector("#smart-button-container #quantitySe
 if (!isNaN(quantity)) {
 quantitySelect.style.visibility = "visible";
 }
-var orderDescription = 'Moonlight Foragers copy Art Print';
+var orderDescription = 'Flaming Art Print';
 if(orderDescription === '') {
 orderDescription = 'Item';
 }
