--- a/_posts/2020-10-16-daybreak.md
+++ b/_posts/2020-10-16-daybreak.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: daybreak
+title: Daybreak
 ---
-![alt text for screen readers](/assets/LowRez49images/daybreak.jpg "daybreak")
+![alt text for screen readers](/assets/images/Daybreak.jpg "Daybreak")
 <div id="smart-button-container">
 <div style="text-align: center;">
 <div style="margin-bottom: 1.25rem;">
-<p>daybreak Art Print</p>
-<select id="item-options"><option value="9inx12in Enhanced Matte Art daybreak Print" price=".25">9inx12in Enhanced Matte Art daybreak Print - .25 USD</option><option value="9inx12inHahnemühle German Etching daybreak Print" price=".25">9inx12inHahnemühle German Etching daybreak Print - .25 USD</option></select>
+<p>Daybreak Art Print</p>
+<select id="item-options"><option value="9inx12in Enhanced Matte Art Daybreak Print" price=".25">9inx12in Enhanced Matte Art Daybreak Print - .25 USD</option><option value="9inx12inHahnemühle German Etching Daybreak Print" price=".25">9inx12inHahnemühle German Etching Daybreak Print - .25 USD</option></select>
 <select style="visibility: hidden" id="quantitySelect"></select>
 </div>
 <div id="paypal-button-container"></div>
@@ -23,7 +23,7 @@ var quantitySelect = document.querySelector("#smart-button-container #quantitySe
 if (!isNaN(quantity)) {
 quantitySelect.style.visibility = "visible";
 }
-var orderDescription = 'daybreak Art Print';
+var orderDescription = 'Daybreak Art Print';
 if(orderDescription === '') {
 orderDescription = 'Item';
 }
